argoCD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rielu-site
spec:
  selector:
    app: rielu-site
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
